# competitive-programming

./: .gitignore  CMakeLists.txt  README.md
algorithms/algorytmy grafowe/: SCC.cpp  dijkstra.cpp
algorithms/graph algorithms/: BFS.cpp  DFS.cpp
algorytmy/: binary search.cpp
algorytmy/algorytmy dynamiczne/: najwieksza-suma-podciagu.cpp  największa suma podciągu.cpp  problem plecakowy.cpp  problem wydawania reszty.cpp  problem-plecakowy.cpp  problem-wydawania-reszty.cpp
algorytmy/algorytmy grafowe/: BFS.cpp  DFS.cpp  SCC.cpp  dfs.cpp  dijkstra.cpp  segment tree interval-point (+,+).cpp  segment tree interval-point (max,max).cpp  segment tree point-interval (+,+).cpp  segment tree point-interval (max,max).cpp  segment-tree-interval-point-(+,+).cpp  segment-tree-interval-point-(max,max).cpp  segment-tree-point-interval-(+,+).cpp  segment-tree-point-interval-(max,max).cpp
algorytmy/algorytmy tekstowe/: algorytm KMP.cpp  algorytm-KMP.cpp  hashing.cpp
algorytmy/pozostale algorytmy/: binary-search.cpp
algorytmy/pozostałe algorytmy/: binary search.cpp
archive/: CMakeLists.txt  readme.txt
archive/codeforces/: Bun Lover.cpp  CMakeLists.txt  Constructive Problem.cpp  Digital Logarithm.cpp  Enlarge-GCD.cpp  Gennady-the-Dentist.cpp  Ice and Fire.cpp  Ideal-Point.cpp  MUH-and-Cube-Walls.cpp  Matryoshkas.cpp  Parity-Shuffle Sorting.cpp  Petya and Exam.cpp  Place for a Selfie.cpp  Playing in a Casino.cpp  Queue-in-the-Train.cpp  Removing-Smallest Multiples.cpp  Scoring-Subsequences.cpp  Triangle Coloring.cpp  Two-Towers.cpp  Xor.cpp  Yet-Another Promotion.cpp
archive/szkopul/: CMakeLists.txt
archive/szkopul/OI/: CMakeLists.txt
archive/szkopul/OI/I/: CMakeLists.txt  Przedsiewziecie.cpp
archive/szkopul/OI/IV/: CMakeLists.txt
archive/szkopul/OI/IX/: CMakeLists.txt  Komiwojażer-Bajtazar.cpp
archive/szkopul/OI/XII/: Autobus.cpp  CMakeLists.txt
archive/szkopul/OI/XIII/: CMakeLists.txt
archive/szkopul/OI/XIV/: CMakeLists.txt
archive/szkopul/OI/XIX/: CMakeLists.txt
archive/szkopul/OI/XV/: CMakeLists.txt
archive/szkopul/OI/XVII/: CMakeLists.txt  Gildie.cpp  Piloci.cpp
archive/szkopul/OI/XVIII/: CMakeLists.txt  Lizak.cpp
archive/szkopul/OI/XX/: Bajtokomputer.cpp  CMakeLists.txt
archive/szkopul/OI/XXI/: CMakeLists.txt
archive/szkopul/OI/XXII/: CMakeLists.txt  Kinoman.cpp  Wilcze-doly.cpp
archive/szkopul/OI/XXIII/: CMakeLists.txt
archive/szkopul/OI/XXIV/: CMakeLists.txt
archive/szkopul/OI/XXIX/: CMakeLists.txt
archive/szkopul/OI/XXV/: CMakeLists.txt
archive/szkopul/OI/XXVI/: CMakeLists.txt
archive/szkopul/OI/XXVII/: CMakeLists.txt
archive/szkopul/OI/XXVIII/: CMakeLists.txt  Plażowicze.cpp
archive/szkopul/Other/: Bierki.cpp  CMakeLists.txt  Marchewki.cpp  Prostokaty.cpp  Tetris-2D.cpp  Wieza.cpp
archive/szkopuł/OI/IV/: Rezerwacja sal wykładowych.cpp
archive/szkopuł/OI/IX/: Działka.cpp  Koleje.cpp
archive/szkopuł/Other/: Trening-centaura.cpp  Zakup działki.cpp  Zawody wędkarskie.cpp  Znaczki.cpp
resources/: CMakeLists.txt
resources/algorithms/: CMakeLists.txt
resources/algorithms/dynamic algorithms/: problem-plecakowy.cpp  problem-wydawania-reszty.cpp
resources/algorithms/dynamic-algorithms/: CMakeLists.txt  najwieksza-suma-podciagu.cpp
resources/algorithms/graph-algorithms/: BFS.cpp  CMakeLists.txt  DFS.cpp  SCC.cpp  dijkstra.cpp
resources/algorithms/other-algorithms/: CMakeLists.txt
resources/algorithms/text-algorithms/: CMakeLists.txt  algorytm-KMP.cpp  hashing.cpp
resources/structures/: CMakeLists.txt  deque.cpp  list.cpp  priority-queue.cpp  set.cpp  stack.cpp  vector.cpp
struktury/: deque.cpp  list.cpp  map.cpp  priority queue.cpp  priority-queue.cpp  queue.cpp  set.cpp  stack.cpp  vector.cpp
(+34 files in other folders)
