cmake_minimum_required(VERSION 3.1...3.29)

add_executable(Bun-Lover Bun-Lover.cpp)
add_executable(Constructive-Problem Constructive-Problem.cpp)
add_executable(Digital-Logarithm Digital-Logarithm.cpp)
add_executable(Enlarge-GCD Enlarge-GCD.cpp)
add_executable(Gennady-the-Dentist Gennady-the-Dentist.cpp)
add_executable(Ice-and-Fire Ice-and-Fire.cpp)
add_executable(Ideal-Point Ideal-Point.cpp)
add_executable(Matryoshkas Matryoshkas.cpp)
add_executable(MUH-and-Cube-Walls MUH-and-Cube-Walls.cpp)
add_executable(Parity-Shuffle-Sorting Parity-Shuffle-Sorting.cpp)
add_executable(Petya-and-Exam Petya-and-Exam.cpp)
add_executable(Place-for-a-Selfie Place-for-a-Selfie.cpp)
add_executable(Playing-in-a-Casino Playing-in-a-Casino.cpp)
add_executable(Queue-in-the-Train Queue-in-the-Train.cpp)
add_executable(Removing-Smallest-Multiples Removing-Smallest-Multiples.cpp)
add_executable(Scoring-Subsequences Scoring-Subsequences.cpp)
add_executable(Triangle-Coloring Triangle-Coloring.cpp)
add_executable(Two-Towers Two-Towers.cpp)
add_executable(Xor Xor.cpp)
add_executable(Yet-Another-Promotion Yet-Another-Promotion.cpp)