cmake_minimum_required(VERSION 3.1...3.29)

add_subdirectory(I)
add_subdirectory(IV)
add_subdirectory(IX)
add_subdirectory(XII)
add_subdirectory(XIII)
add_subdirectory(XIV)
add_subdirectory(XV)
add_subdirectory(XVII)
add_subdirectory(XVIII)
add_subdirectory(XIX)
add_subdirectory(XX)
add_subdirectory(XXI)
add_subdirectory(XXII)
add_subdirectory(XXIII)
add_subdirectory(XXIV)
add_subdirectory(XXV)
add_subdirectory(XXVI)
add_subdirectory(XXVII)
add_subdirectory(XXVIII)
add_subdirectory(XXIX)